# Traffic-Surveillance-with-oject-detection

./: colour_for_bounding_boxes.py  fetch_model_and_tracker.py  label_manipulation.py  main.py  model_training.py  process_frames_and_detect.py  pyproject.toml  remove_redundant_labels.py  run_code.py  traffic_test.py  video_initialize.py
